--- a/src/index-animation-learning.html
+++ b/src/index-animation-learning.html
@@ -26,7 +26,7 @@
     
         </div>
         <div id="content" style="background-color: #E0E0E0; width: 100vw; height:calc(100vh - 100px) !important;">
-            <canvas id="myCanvas"></canvas>
+            <canvas id="animationCanvas"></canvas>
         </div>
 
 
